--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "styled-components": "^6.1.8"
   }
 }
