--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "dotenv": "^16.4.5",
+    "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8"
   }
 }
